--- a/frontend/html/pages/trading.html
+++ b/frontend/html/pages/trading.html
@@ -148,5 +148,25 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script>
+    async function fetchStockData() {
+        try {
+            const response = await fetch('http://localhost:3000/api/stocks');
+            const stocks = await response.json();
+            const stockDataDiv = document.getElementById('stock-data');
+            stockDataDiv.innerHTML = stocks.map(stock => `
+                <div>
+                    <h3>${stock.name} (${stock.symbol})</h3>
+                    <p>Status: ${stock.status}</p>
+                </div>
+            `).join('');
+        } catch (error) {
+            console.error('Error fetching stock data:', error);
+        }
+    }
+
+    fetchStockData();
+  </script>
 </body>
 </html>
