Primer actualizacion de watchlist

--- a/frontend/html/pages/index.html
+++ b/frontend/html/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acciones El Bosque - Plataforma de Trading</title>
+    <title> Horizont - Plataforma de Trading</title>
 
     <!-- Estilos -->
     <link rel="stylesheet" href="../../styles/base/main.css">
@@ -16,7 +16,7 @@
 <!-- Barra de Navegación -->
 <nav class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="../../public/assets/images/logo/logo.svg" class="logo-img" alt="Acciones El Bosque"></a>
+        <img src="../../Resources/HORIZONT.png" class="logo-img" alt="HORIZONT">
     </div>
     <div class="nav-links" id="nav-session">
         <a href="login.html" class="nav-link">Ingresar</a>
@@ -204,53 +204,8 @@
     </div>
 </section>
 
-<!-- Pie de Página footer -->
-<footer class="main-footer">
-    <div class="footer-content">
-        <div class="footer-section">
-            <h4>Acciones El Bosque</h4>
-            <div class="footer-contact">
-                <p>Universidad El Bosque</p>
-                <p>Bogotá, Colombia</p>
-            </div>
-            <div class="footer-social">
-                <a href="#"><span class="material-icons">facebook</span></a>
-                <a href="#"><span class="material-icons">twitter</span></a>
-                <a href="#"><span class="material-icons">linkedin</span></a>
-            </div>
-        </div>
-        <div class="footer-section">
-            <h4>Trading</h4>
-            <ul>
-                <li><a href="trading.html">Plataforma de Trading</a></li>
-                <li><a href="portfolio.html">Mi Portafolio</a></li>
-                <li><a href="orders.html">Órdenes</a></li>
-                <li><a href="market.html">Mercado</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h4>Recursos</h4>
-            <ul>
-                <li><a href="notifications.html">Notificaciones</a></li>
-                <li><a href="learning.html">Educación</a></li>
-                <li><a href="support.html">Soporte</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h4>Legal</h4>
-            <ul>
-                <li><a href="terms.html">Términos de Uso</a></li>
-                <li><a href="privacy.html">Privacidad</a></li>
-                <li><a href="disclaimer.html">Disclaimer</a></li>
-                <li><a href="contact.html">Contacto</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <p>&copy; 2025 Acciones El Bosque. Todos los derechos reservados.</p>
-    </div>
-</footer>
+<!-- Footer -->
+<div id="footer-placeholder"></div>
 
 <!-- Scripts -->
 <!-- Script unificado de sesión y menú -->
@@ -293,7 +248,7 @@
     }
 </script>
 
-
+<script src="/frontend/js/include-components.js"></script>
 <script src="../../js/session.js"></script>
 </body>
 </html>
