--- a/frontend/html/pages/login.html
+++ b/frontend/html/pages/login.html
@@ -14,7 +14,7 @@
 <!-- Barra de Navegación Simplificada -->
 <nav class="navbar navbar-simple">
     <div class="logo">
-        <a href="index.html"><img src="../../public/assets/images/logo/logo.svg" class="logo-img" alt="Acciones El Bosque"></a>
+        <img src="../../Resources/HORIZONT.png" class="logo-img" alt="HORIZONT">
     </div>
     <div class="nav-back">
         <a href="index.html" class="back-link">
@@ -27,7 +27,7 @@
 <div class="login-container">
     <div class="login-card">
         <div class="login-header">
-            <img src="assets/images/logo/logo.svg" alt="Acciones El Bosque">
+            <img src="../../Resources/HORIZONT.png" class="logo-img" alt="HORIZONT">
             <h1>Bienvenido de Nuevo</h1>
             <p>Ingresa tus credenciales para continuar</p>
         </div>
