--- a/frontend/html/pages/trading.html
+++ b/frontend/html/pages/trading.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trading - Acciones El Bosque</title>
+  <title>Trading -  Horizont</title>
   <link rel="stylesheet" href="../../styles/base/main.css" />
   <link rel="stylesheet" href="../../styles/pages/mit-theme.css" />
   <link rel="stylesheet" href="../../styles/pages/trading.css" />
@@ -15,13 +15,18 @@
 <!-- Barra de Navegación -->
 <nav class="navbar">
   <div class="logo">
-    <a href="index.html"><img src="../../public/assets/images/logo/logo.svg" class="logo-img" alt="Acciones El Bosque" /></a>
+    <img src="../../Resources/HORIZONT.png" class="logo-img" alt="HORIZONT">
   </div>
   <ul class="nav-links">
     <li><a href="index.html">Inicio</a></li>
     <li><a href="trading.html" class="active">Trading</a></li>
     <li><a href="portfolio.html">Portafolio</a></li>
-    <li><a href="notifications.html">Notificaciones</a></li>
+    <li>
+      <a href="notifications.html" class="notifications-link" title="Notificaciones">
+        <span class="material-icons">notifications</span>
+        <span class="visually-hidden">Notificaciones</span>
+      </a>
+    </li>
     <li><a href="admin.html">Administración</a></li>
   </ul>
   <!-- Estado de sesión -->
@@ -99,14 +104,7 @@
 </main>
 
 <!-- Footer -->
-<footer class="main-footer">
-  <div class="footer-content">
-    <!-- ... footer sections ... -->
-  </div>
-  <div class="footer-bottom">
-    <p>&copy; 2025 Acciones El Bosque. Todos los derechos reservados.</p>
-  </div>
-</footer>
+<div id="footer-placeholder"></div>
 
 <!-- Scripts de Trading -->
 <script type="module">
@@ -116,7 +114,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<<<<<<< HEAD
+
 <!-- Script para manejar sesión, protección de ruta y navbar -->
 <script>
   function updateNavbar() {
@@ -148,6 +146,8 @@
   window.addEventListener('load', updateNavbar);
 </script>
 
+<script src="/frontend/js/include-components.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js¿"></script>
 
 </body>
 </html>
