commit después de probar el funcionamiento del programa

--- a/frontend/html/pages/pasarela-pagos.html
+++ b/frontend/html/pages/pasarela-pagos.html
@@ -36,10 +36,14 @@
     </ul>
     <div class="user-menu" id="userMenu">
         <span class="user-name" id="userName"></span>
-        <button class="notification-bell" id="notificationBell">
-            <span class="material-icons">notifications</span>
-            <span class="notification-badge" id="notificationCount">0</span>
-        </button>
+       <div class="user-menu">
+        <a href="login.html" id="loginLink">Iniciar Sesión</a>
+        <div id="userInfo" style="display: none;">
+            <span id="userName" class="material-icons">account_circle</span>
+            <span id="userGreeting" style="margin: 0 8px;"></span>
+            <button id="logoutBtn" class="btn-logout">Cerrar sesión</button>
+        </div>
+    </div>
     </div>
 </nav>
 
@@ -120,5 +124,6 @@
     // Inicial
     document.querySelector('.card-fields').style.display = 'block';
 </script>
+<script src="/frontend/js/session.js"></script>
 </body>
 </html>
