--- a/frontend/html/pages/trading.html
+++ b/frontend/html/pages/trading.html
@@ -143,7 +143,7 @@
 
   
   <script type="module">
-    import { initializeTrading } from '../../js/controllers/trading.js';
+    import { initializeTrading } from '../../js/trading.js';
     document.addEventListener('DOMContentLoaded', initializeTrading);
   </script>
 
